Implemented basic Savefile listing
Signed-off-by: rowan <rowan@rowancrowther.me.uk>